# Logger

./: CMakeLists.txt  LogCoutPolicy.cpp  LogCoutPolicy.h  LogDirectCoutPolicy.cpp  LogDirectCoutPolicy.h  LogLine.cpp  LogLine.h  LogMacros.h  LogPolicy.cpp  LogPolicy.h  LogSeverity.cpp  LogSeverity.h  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h
GTest/: CMakeLists.txt  LogTests.cpp  Main.cpp
TestApps/: CMakeLists.txt  LogTestApp.cpp
